--- a/DockerNoCommands.csproj
+++ b/DockerNoCommands.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+    <PackageReference Include="Material.Avalonia" Version="1.0.1" />
   </ItemGroup>
 </Project>
